--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -9,7 +9,7 @@
             facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc
             putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
         <div class="author-photo">
-            <img src="" alt="page-author-photo" class="my-face">
+            <img src="/static/images/author-photos/img_avatar.png" alt="page-author-photo">
         </div>
     </div>
     <section class="how-to">
