--- a/static/css/style.css
+++ b/static/css/style.css
@@ -609,6 +609,19 @@ form p {
   font-size: 14px;
 }
 
+.author-photo {
+  display: inherit;
+  justify-content: center;
+  padding-bottom: 1rem;
+}
+.author-photo img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 5px solid #FFF;
+  box-shadow: 0px 0px 5px 1px #ccc;
+}
+
 .how-to {
   padding: 1rem;
 }
