--- a/scss/page-styles/about.scss
+++ b/scss/page-styles/about.scss
@@ -5,16 +5,14 @@
 .about {
     display: flex;
     padding: 1rem;
-}
-
-.about-us-text {
-    font-size: 14px;
+    flex-direction: column;
 }
 
 .author-photo {
     display: inherit;
     justify-content: center;
     padding-bottom: 1rem;
+    margin-bottom: 1rem;
     img {
         width: 150px;
         height: 150px;
@@ -22,6 +20,10 @@
         border: 5px solid #FFF;
         box-shadow: 0px 0px 5px 1px #ccc;
     }
+}
+
+.about-us-text {
+    font-size: 14px;
 }
 
 .how-to {
