--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,16 +1,12 @@
 {% extends 'layout/base.html' %} {% block content %}
-<h1 class="hidden">About Page</h1>
 <div class="container about-main-container">
     <h2 class="page-title">About Baking Master</h2>
     <div class="about">
         <div class="author-photo">
             <img src="/static/images/author-photos/Author-photo.png" alt="page-author-photo">
         </div>
-        <p class="about-us-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
-            ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril
-            delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui
-            facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc
-            putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
+        <p class="about-us-text">Hi, hello! How are you? My name is Karol and I'm an author of this web app.This is my first web application runned by Python, created in <a href="https://aws.amazon.com/cloud9/" target="_blank" class="ex-link">AWS Cloud9</a> and it is also deployed on <a href="https://www.heroku.com" target="_blank" class="ex-link">Heroku Pages</a>. This project was created to show my current skills and
+            what I have learned while studying my course from <a href="https://codeinstitute.net" target="_blank" class="ex-link">Code Institute</a>.<br><br>I hope you'll enjoy time spent here and you will find some fantastic recipes that will make you a Baking Master.</p>
     </div>
     <section class="how-to">
         <div id="accordion">
