--- a/scss/page-styles/about.scss
+++ b/scss/page-styles/about.scss
@@ -14,8 +14,8 @@
     padding-bottom: 1rem;
     margin-bottom: 1rem;
     img {
-        width: 150px;
-        height: 150px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         border: 5px solid #FFF;
         box-shadow: 0px 0px 5px 1px #ccc;
@@ -24,6 +24,12 @@
 
 .about-us-text {
     font-size: 14px;
+    
+    .ex-link {
+        text-decoration: none;
+        color: #FF3366;
+        font-weight: 400;
+    }
 }
 
 .how-to {
