--- a/static/css/style.css
+++ b/static/css/style.css
@@ -613,8 +613,8 @@ form p {
   margin-bottom: 1rem;
 }
 .author-photo img {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   border: 5px solid #FFF;
   box-shadow: 0px 0px 5px 1px #ccc;
@@ -622,6 +622,11 @@ form p {
 
 .about-us-text {
   font-size: 14px;
+}
+.about-us-text .ex-link {
+  text-decoration: none;
+  color: #FF3366;
+  font-weight: 400;
 }
 
 .how-to {
