--- a/scss/page-styles/about.scss
+++ b/scss/page-styles/about.scss
@@ -4,14 +4,14 @@
 
 .about {
     display: flex;
-    padding: 1rem;
+    padding: 0.5rem 1rem;
     flex-direction: column;
 }
 
 .author-photo {
     display: inherit;
     justify-content: center;
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
     margin-bottom: 1rem;
     img {
         width: 200px;
