--- a/static/css/style.css
+++ b/static/css/style.css
@@ -602,14 +602,14 @@ form p {
 
 .about {
   display: flex;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   flex-direction: column;
 }
 
 .author-photo {
   display: inherit;
   justify-content: center;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
   margin-bottom: 1rem;
 }
 .author-photo img {
