About QA section text updated

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -5,22 +5,22 @@
         <div class="author-photo">
             <img src="/static/images/author-photos/Author-photo.png" alt="page-author-photo">
         </div>
-        <p class="about-us-text">Hi, hello! How are you? My name is Karol and I'm an author of this web app.This is my first web application runned by Python, created in <a href="https://aws.amazon.com/cloud9/" target="_blank" class="ex-link">AWS Cloud9</a> and it is also deployed on <a href="https://www.heroku.com" target="_blank" class="ex-link">Heroku Pages</a>. This project was created to show my current skills and
-            what I have learned while studying my course from <a href="https://codeinstitute.net" target="_blank" class="ex-link">Code Institute</a>.<br><br>I hope you'll enjoy time spent here and you will find some fantastic recipes that will make you a Baking Master.</p>
+        <p class="about-us-text">Hi, hello! How are you? My name is Karol and I'm an author of this web app. This is my first web application runned by Python, created in <a href="https://aws.amazon.com/cloud9/" target="_blank" class="ex-link">AWS Cloud9</a> and it is also deployed
+            on <a href="https://www.heroku.com" target="_blank" class="ex-link">Heroku Pages</a>. This project was created to show my current skills and what I have learned while studying my course from
+            <a href="https://codeinstitute.net" target="_blank" class="ex-link">Code Institute</a>.<br><br> I hope you'll enjoy time spent here and you will find some fantastic recipes that will make you a Baking Master.</p>
     </div>
     <section class="how-to">
         <div id="accordion">
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h3 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">1. Why "BakingMaster" ?</button>
+                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">1. "BakingMaster" Story</button>
                     </h3>
                 </div>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div class="card-body">Why this app is called "Baking Master"... hmm..<br>I think in everybody's life there is a time when they want to develope their skills in different ways. I love cooking, my parents always have been telling me stories when I was a little
+                        kid, all covered in flour, after trying to bake something. I always dreamed to become a chef of any of the restaurant, sadly truth quickly came to reality, as I wasn't so good, as I though I am.. I never stopped cooking! Doing
+                        this project I wanted to share a piece of myself and advice you to "Never quit your dreams". As I can't become a Chef of any fameous restaurant, it doesn't mean I can't be a Baking Master of my Home!
                     </div>
                 </div>
             </div>
@@ -32,23 +32,21 @@
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        People are asking, "But.., Whats Is All About?". It's realy simple. This app is giving you opportunity to become a Baking Master of your home. You can search through all different types of recipes. You are able to create an account, which will let you
+                        store your all loved recipes in favourite list. You can also create your own recipes to share them to the World.
                     </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card-header" id="headingThree">
                     <h3 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">3. What I am doing here ?</button>
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">3. Style and Design</button>
                     </h3>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div class="card-body">I tried to create nice and clear design in this project. I am trying to create responsive design webistes, if you will find something that isn't right, it's not reacting like you think it should, I will do appriciate your feedback.
+                        I always want to imporve my skills and better understand user expirience and user interface. I've created static navigation with nice and smooth dropdown navigation for smaller size devices. Coloristic was chosen randomly by matching
+                        best contrast for the colors, there is a main "Radical Red" color contrasting on white color and also accent color is "Verdigris" (blue/green). This project was not based on any other projects design.
                     </div>
                 </div>
             </div>
@@ -60,9 +58,11 @@
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        <ul class="have-fun-rules">
+                            <li class="rule-link">Rule 1: Have fan!</li>
+                            <li class="rule-link">Rule 2: Have fan!</li>
+                            <li class="rule-link">Rule 3: Have fan!</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -73,10 +73,7 @@
                     </h3>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-                    <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
-                        on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                        farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                    <div class="card-body">This project is using EDAMAM API, it has been created for learning purposes only.<br>If you would like to contact me to discuss anything, do not hesitate and use contact form!
                     </div>
                 </div>
             </div>
