--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -14,7 +14,7 @@
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h3 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">1. "BakingMaster" Story</button>
+                        <button class="btn btn-link button-link-dropdown" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">1. "BakingMaster" Story</button>
                     </h3>
                 </div>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
@@ -27,7 +27,7 @@
             <div class="card">
                 <div class="card-header" id="headingTwo">
                     <h3 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">2. What is all about ?</button>
+                        <button class="btn btn-link button-link-dropdown" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">2. What is all about ?</button>
                     </h3>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -40,7 +40,7 @@
             <div class="card">
                 <div class="card-header" id="headingThree">
                     <h3 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">3. Style and Design</button>
+                        <button class="btn btn-link button-link-dropdown" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">3. Style and Design</button>
                     </h3>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
@@ -53,7 +53,7 @@
             <div class="card">
                 <div class="card-header" id="headingFour">
                     <h3 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">4.Website Rules</button>
+                        <button class="btn btn-link button-link-dropdown" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">4.Website Rules</button>
                     </h3>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
@@ -69,7 +69,7 @@
             <div class="card">
                 <div class="card-header" id="headingFive">
                     <h3 class="mb-0">
-                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">5.About this project</button>
+                        <button class="btn btn-link button-link-dropdown" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">5.About this project</button>
                     </h3>
                 </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
