--- a/scss/page-styles/about.scss
+++ b/scss/page-styles/about.scss
@@ -36,10 +36,9 @@
     padding: 1rem;
 }
 
-.btn,
-.button-link {
+.button-link-dropdown {
     color: #1DB0B5;
-    opacity: 0.6;
+    opacity: 0.8;
     &:hover {
         color: #1DB0B5;
         opacity: 1;
