Link changed to outsde website link

--- a/templates/components/footer/footer.html
+++ b/templates/components/footer/footer.html
@@ -18,7 +18,7 @@
                 <ul class="footer-menu">
                     <h4>Worth knowing</h4>
                     <li><a href="{{url_for('recipes')}}" class="footer-link">Recipes</a></li>
-                    <li><a href="{{url_for('equipment')}}" class="footer-link">Equipement</a></li>
+                    <li><a href="https://www.procook.co.uk/shop/baking?gclid=CjwKCAjw74b7BRA_EiwAF8yHFD1OgL4d-g1l3Bpbx_zo38NWO8DWS_UUAtOyoYZgOmyVbYJsjarkshoCtSEQAvD_BwE" target="_blank" class="footer-link">Equipement</a></li>
                     <li><a href="{{url_for('about')}}" class="footer-link">About</a></li>
                     <li><a href="{{url_for('contact')}}" class="footer-link">Contact</a></li>
                     <li><a href="{{url_for('site_map')}}" class="footer-link">Site - Map</a></li>
