--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav">
         <li><a href="{{url_for('recipes')}}" class="{{ 'active-link' if page == 'recipes' else 'hvr-underline-from-left'}}">Recipes</a></li>
         <li><a href="{{url_for('top_hundredd')}}" class="{{ 'active-link' if page == 'top-hundred' else 'hvr-underline-from-left'}}"><i class="far fa-heart fav-heart-icon"></i>Top 100</a></li>
-        <li><a href="https://www.procook.co.uk/shop/baking?gclid=CjwKCAjw74b7BRA_EiwAF8yHFD1OgL4d-g1l3Bpbx_zo38NWO8DWS_UUAtOyoYZgOmyVbYJsjarkshoCtSEQAvD_BwE" target="_blank" class="{{ 'active-link' if page == 'equipment' else 'hvr-underline-from-left'}}">Equipment</a></li>
+        <li><a href="{{url_for('about')}}" class="{{ 'active-link' if page == 'top-hundred' else 'hvr-underline-from-left'}}">About</a></li>
         <li><a href="{{url_for('contact')}}" class="{{ 'active-link' if page == 'contact' else 'hvr-underline-from-left'}}">Contact</a></li>
       </ul>
       <!-- search and login links -->
