--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -10,8 +10,8 @@
 <meta name="theme-color" content="#FFFFFF">
 <!-- Favicon -->
 <link rel="shortcut icon" href="{{url_for('static', filename='images/favicon/favicon.ico')}}" type="image/x-icon">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{url_for('static', filename='images/favicon/favicon-32x32.png')}}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{url_for('static', filename='images/favicon/favicon-16x16.png')}}">
 <!-- Maxcdn.bootstrapcdn.com -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <!-- Font Awesome -->
