--- a/static/css/style.css
+++ b/static/css/style.css
@@ -186,6 +186,12 @@ h4 {
     bottom: 4px;
   }
 }
+.card-main {
+  width: 300px;
+  height: 200px;
+  border: 1px solid black;
+}
+
 form p {
   font-size: 0.85rem;
 }
