--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,6 +192,11 @@ h4 {
   border: 1px solid black;
 }
 
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
+
 form p {
   font-size: 0.85rem;
 }
