--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -1,3 +1,5 @@
 {% extends 'layout/base.html' %} {% set page = "recipes" %} {% block content %}
 <h1 class="hidden">All Recipes</h1>
+<!-- Include carousel -->
+{% include 'components/carousel/carousel.html' %} 
 {% endblock %}
