Search bar tag added, set page variable changed

--- a/templates/pages/recipes.html
+++ b/templates/pages/recipes.html
@@ -2,4 +2,9 @@
 <h1 class="hidden">All Recipes</h1>
 <!-- Include carousel -->
 {% include 'components/carousel/carousel.html' %} 
+<div class="search-container">
+    
+</div>
+
+
 {% endblock %}
