--- a/templates/pages/landing-page.html
+++ b/templates/pages/landing-page.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %} {% set page = "recipes" %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "landin-page" %} {% block content %}
 <h1 class="hidden">Home page</h1>
 <!-- Include carousel -->
 {% include 'components/carousel/carousel.html' %} 
