--- a/scss/components/carousel/carousel.scss
+++ b/scss/components/carousel/carousel.scss
@@ -1,4 +1,9 @@
-  .carousel-inner img {
-    width: 100%;
-    height: 100%;
-  }
+.carousel {
+  min-height: 100%;
+  margin-top: 60px;
+}
+
+.carousel-inner {
+  width: 100%;
+  max-height: 400px;
+}
