--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,9 +192,14 @@ h4 {
   border: 1px solid black;
 }
 
-.carousel-inner img {
+.carousel {
+  min-height: 100%;
+  margin-top: 60px;
+}
+
+.carousel-inner {
   width: 100%;
-  height: 100%;
+  max-height: 400px;
 }
 
 form p {
