--- a/templates/components/carousel/carousel.html
+++ b/templates/components/carousel/carousel.html
@@ -1,35 +1,33 @@
-<div id="main-carousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#main-carousel" data-slide-to="1"></li>
-    <li data-target="#main-carousel" data-slide-to="2"></li>
-    <li data-target="#main-carousel" data-slide-to="3"></li>
-  </ol>
+<div class="main-carousel-container">
+  <div id="main-carousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#main-carousel" data-slide-to="1"></li>
+      <li data-target="#main-carousel" data-slide-to="2"></li>
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="/static/images/carousel/baking.jpeg" alt="carouse_image_1">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="/static/images/carousel/baking_1.jpg" alt="carouse_image_1">
+      </div>
+      <div class="item">
+        <img src="/static/images/carousel/baking_2.jpg" alt="carouse_image_2">
+      </div>
+      <div class="item">
+        <img src="/static/images/carousel/baking_3.jpg" alt="carouse_image_3">
+      </div>
     </div>
-    <div class="item">
-      <img src="/static/images/carousel/baking1.jpg" alt="carouse_image_2">
-    </div>
-    <div class="item">
-      <img src="/static/images/carousel/baking2.jpeg" alt="carouse_image_3">
-    </div>
-    <div class="item">
-      <img src="/static/images/carousel/baking3.jpg" alt="carouse_image_4">
-    </div>
-  </div>
 
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#main-carousel" data-slide="prev">
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#main-carousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
-  <a class="right carousel-control" href="#main-carousel" data-slide="next">
+    <a class="right carousel-control" href="#main-carousel" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
+  </div>
 </div>
