--- a/templates/components/carousel/carousel.html
+++ b/templates/components/carousel/carousel.html
@@ -1,4 +1,5 @@
 <div class="main-carousel-container">
+  <h2 class="hidden">Carousel</h2>
   <div id="main-carousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
