--- a/templates/pages/landing-page.html
+++ b/templates/pages/landing-page.html
@@ -8,18 +8,46 @@
     <div class="top-landing-page">
         <div class="famous-master">
             <div class="row featurette">
-                <div class="col-md-7">
+                <div class="first-part col-xs-12 col-sm-10 col-md-10">
                     <h2 class="featurette-heading">First famous chef:<span class="text-muted"> Pierre Hermé</span></h2>
                     <p class="lead">When you’re dubbed as “The Picasso of Pastry,” it’s clear you have an incredible talent. Pierre Hermé is the ‘Picasso’ of pastries. He is notably most famous for his flavoured macarons that are rich and unusual in taste.His baking
                         skills have made him well known and he has written over a dozen books. He is the youngest person to ever be named “France’s Pastry Chef of the Year”. Currently, he manages two Michelin star awarded restaurants in France.</p>
                 </div>
-                <div class="col-md-5">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 300x300">
-                        <rect width="100%" height="100%" fill="#eee"></rect>
-                        <img src="" alt="duffgoldman" class="">
-                        </svg>
+                <div class="second-part col-xs-12 col-sm-2 col-md-2">
+                    <div class="chef-photo">
+                        <img src="/static/images/author-photos/pierre_herme.jpg" alt="pierre_herme">
+                    </div>
+                </div>
+            </div>
+            <div class="row featurette">
+                <div class="first-part middle-text col-xs-12 col-sm-10 col-md-10">
+                    <h2 class="featurette-heading">Second famous chef:<span class="text-muted"> François Payard</span></h2>
+                    <p class="lead">Owning bakeries and pastry shops across the world, François Payard’s skills as a pastry chef helped him create a line of successful shops. He has created many luxury desserts. From his website you can even buy wedding cakes (of course,
+                        at a high cost but they are incredible).</p>
+                </div>
+                <div class="second-part middle-photo col-xs-12 col-sm-2 col-md-2">
+                    <div class="chef-photo">
+                        <img src="/static/images/author-photos/payard.jpg" alt="payard">
+                    </div>
+                </div>
+            </div>
+            <div class="row featurette">
+                <div class="first-part col-xs-12 col-sm-10 col-md-10">
+                    <h2 class="featurette-heading">Third famous chef:<span class="text-muted"> Duff Goldman</span></h2>
+                    <p class="lead">You might have seen Duff Goldman on the reality TV show Ace of Cakes which features his Charm City Cakes shop. His cakes have been featured on Man V. Food, Oprah and The Tonight Show with Jay Leno. Whilst he is well known for his appearances
+                        on television, his inspiring cakes are amazing because they are so unusual. Many of the people he has employed did not have any culinary experience but were artists or sculptors.</p>
+                </div>
+                <div class="second-part col-xs-12 col-sm-2 col-md-2">
+                    <div class="chef-photo">
+                        <img src="/static/images/author-photos/duffgoldman.jpg" alt="duffgoldman">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="bottom-landing-page">
+        <p class="page-title lead-landing">Now, when you met these fantastic people, don't waste your time!</br>
+            Search through recipes and bake something</p>
+    </div>
 </div>
+{% endblock %}
