Landing page featurett and carousel style changed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -770,5 +770,74 @@ form p {
     bottom: 0;
   }
 }
+.landing-page-main {
+  padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+}
+
+.featurette {
+  padding-top: 40px;
+  display: flex;
+  padding: 0.5rem 1rem;
+}
+
+.featurette-heading {
+  font-size: 18px;
+}
+
+.lead {
+  font-size: 16px;
+  padding: 0.5rem 1rem;
+}
+
+.chef-photo {
+  display: inherit;
+  justify-content: center;
+  padding-top: 10px;
+}
+.chef-photo img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 2px solid #FFF;
+  box-shadow: 0px 0px 5px 1px #ccc;
+}
+
+.lead-landing {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.bottom-landing-page {
+  padding-top: 60px;
+}
+
+.middle-photo {
+  order: 1;
+}
+
+.middle-text {
+  order: 2;
+}
+
+@media screen and (max-width: 768px) {
+  #home-page .featurette {
+    flex-direction: column;
+    text-align: center;
+  }
+  #home-page .middle-photo {
+    order: 2;
+  }
+  #home-page .middle-text {
+    order: 1;
+  }
+  #home-page .first-part {
+    order: 2;
+  }
+  #home-page .second-part {
+    order: 1;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
