--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,11 +7,8 @@
 
 //import componenets styles
 @import 'components/header/nav.scss';
-
 @import 'components/cards/recipe-card.scss';
-
 @import 'components/carousel/carousel.scss';
-
 @import 'components/forms/forms.scss';
 @import 'components/forms/contact-form.scss';
 @import 'components/forms/login-form.scss';
@@ -33,3 +30,4 @@
 @import 'page-styles/recovery.scss';
 @import 'page-styles/register.scss';
 @import 'page-styles/search-result.scss';
+@import 'page-styles/landing-page.scss';
