Motivation paragraphs changed and split between top and bottom part

--- a/templates/pages/landing-page.html
+++ b/templates/pages/landing-page.html
@@ -4,7 +4,7 @@
 {% include 'components/carousel/carousel.html' %}
 <div class="container landing-page-main">
     <h2 class="page-title">First time can be the best time!</h2>
-    <p class="lead">Never give up! Especially when you are starting new beautiful adventure with baking</p>
+    <p class="lead">Join our baking family and become a <strong>'Picasso'</strong> of pastries.</br>Meet best of the bests:</p>
     <div class="top-landing-page">
         <div class="famous-master">
             <div class="row featurette">
@@ -47,7 +47,8 @@
     </div>
     <div class="bottom-landing-page">
         <p class="page-title lead-landing">Now, when you met these fantastic people, don't waste your time!</br>
-            Search through recipes and bake something</p>
+            Search through recipes and bake something.</br></p>
+        <p class="lead">Remember, never give up! Especially when you are starting new beautiful adventure with baking.</p>
     </div>
 </div>
 {% endblock %}
