Carousel max-width changed to 400px

--- a/scss/components/carousel/carousel.scss
+++ b/scss/components/carousel/carousel.scss
@@ -5,10 +5,11 @@
 
 .carousel-inner {
   height: auto;
-  max-height: 300px;
+  max-height: 400px;
 
   img {
     width: 100%;
+    height: inherit;
   }
 }
 
