Landing page chefs section style changed

--- a/templates/pages/landing-page.html
+++ b/templates/pages/landing-page.html
@@ -20,12 +20,12 @@
                 </div>
             </div>
             <div class="row featurette">
-                <div class="first-part middle-text col-xs-12 col-sm-10 col-md-10">
+                <div class="first-part col-xs-12 col-sm-10 col-md-10">
                     <h2 class="featurette-heading">Second famous chef:<span class="text-muted"> François Payard</span></h2>
                     <p class="lead">Owning bakeries and pastry shops across the world, François Payard’s skills as a pastry chef helped him create a line of successful shops. He has created many luxury desserts. From his website you can even buy wedding cakes (of course,
                         at a high cost but they are incredible).</p>
                 </div>
-                <div class="second-part middle-photo col-xs-12 col-sm-2 col-md-2">
+                <div class="second-part col-xs-12 col-sm-2 col-md-2">
                     <div class="chef-photo">
                         <img src="/static/images/author-photos/payard.jpg" alt="payard">
                     </div>
