--- a/templates/components/forms/login-form.html
+++ b/templates/components/forms/login-form.html
@@ -24,12 +24,12 @@
             <!-- Email box -->
             <div class="form-group">
                 <label>Email address</label>
-                <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Enter email" required>
+                <input type="email" class="form-control" id="login-email" name="email" aria-describedby="emailHelp" placeholder="Enter email" required>
             </div>
             <!-- Password input box -->
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" class="form-control" id="login-password" placeholder="Password" required>
+                <input type="password" class="form-control" id="login-password" name="password" placeholder="Password" required>
             </div>
             <!-- Login button -->
             <div class="form-group">
