Flash messages added

--- a/scss/components/forms/login-form.scss
+++ b/scss/components/forms/login-form.scss
@@ -75,3 +75,30 @@
         opacity: 1;
     }
 }
+
+// flash message style
+.flash-login {
+    height: auto;
+    width: 100%;
+    border: 1px solid #5aac17;
+    background-color: rgba(230, 255, 204, 0.6);
+    border-radius: 5px;
+    text-align: left;
+
+    p {
+        margin: 0;
+        padding: 0.5rem;
+        font-size: 0.85rem;
+        font-weight: 400;
+        color: #5aac17;
+    }
+}
+
+.incorrect-user {
+    @extend .flash-login;
+    border: 1px solid #FF3366;
+    background-color: rgba(255, 172, 193, 0.6);
+    p {
+        color: #FF3366;
+    }
+}
