Set page changed to account

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,5 +1,5 @@
-{% extends 'layout/base.html' %} {% set page = "contact" %} {% block content %}
+{% extends 'layout/base.html' %} {% set page = "account" %} {% block content %}
 <div class="">
-    <h1 class="">Welcome Bacl!</h1>
+    <h1 class="">Welcome Back!</h1>
 </div>
 {% endblock %}
