Account style file importet

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,3 +31,4 @@
 @import 'page-styles/register.scss';
 @import 'page-styles/search-result.scss';
 @import 'page-styles/landing-page.scss';
+@import 'page-styles/account.scss';
