--- a/static/css/style.css
+++ b/static/css/style.css
@@ -856,5 +856,8 @@ form p {
     order: 1;
   }
 }
+#user-account .main-container {
+  padding-top: 3.5rem;
+}
 
 /*# sourceMappingURL=style.css.map */
