Session email addres converted to username, shows in welcome page

--- a/templates/components/header/nav.html
+++ b/templates/components/header/nav.html
@@ -23,7 +23,7 @@
       </ul>
       <!-- search and login links -->
       <ul class="nav navbar-nav navbar-right">
-        {% if session['username']%}
+        {% if session['email']%}
           <li><a href="{{url_for('index')}}" class="{{ 'active-link' if page == 'account' else 'hvr-underline-from-left'}}">Account</a></li>
           <li><a href="{{url_for('logout')}}" class="{{ 'active-link' if page == 'logout' else 'hvr-underline-from-left'}}">Logout</a></li>
         {% else %}
