--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %} {% set page = "account" %} {% block content %}
 <div class="container">
     <h1 class="hidden">Account Page</h1>
-    <h2 class="welcome-lead">Welcome back {{session['email']}} !</h2>
+    <h2 class="welcome-lead">Welcome back {{session['name']}}!</h2>
 </div>
 {% endblock %}
