--- a/scss/page-styles/account.scss
+++ b/scss/page-styles/account.scss
@@ -1,5 +1,16 @@
-#user-account {
-    .main-container {
-        padding-top: 3.5rem;
+.account-main-container {
+    padding-top: 60px;
+}
+
+.account {
+    display: flex;
+    padding: 0.5rem 1rem;
+    flex-direction: column;
+}
+
+.welcome-lead {
+    color: #000;
+    span {
+        color: #FF3377;
     }
 }
