--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,16 @@
 {% extends 'layout/base.html' %} {% set page = "account" %} {% block content %}
-<div class="container">
+<div class="container account-main-container">
     <h1 class="hidden">Account Page</h1>
-    <h2 class="welcome-lead">Welcome back {{session['name']}}!</h2>
+    <div class="account">
+        {% if username !='' %}
+        <h3 class="page-title">Account</h3>
+        <h4 class="welcome-lead">Welcome back
+            <span>{{session['name']}}</span> !
+        </h4>
+    
+        {% else %}
+        <h4 class="welcome-lead">Welcome back!</h4>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
