--- a/scss/page-styles/account.scss
+++ b/scss/page-styles/account.scss
@@ -1,16 +1,34 @@
 .account-main-container {
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 .account {
     display: flex;
     padding: 0.5rem 1rem;
     flex-direction: column;
-}
 
-.welcome-lead {
-    color: #000;
-    span {
-        color: #FF3377;
+
+    .welcome-lead {
+        color: #000;
+        span {
+            white-space: nowrap;
+            color: #FF3377;
+        }
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        li {
+            a {
+                text-decoration: none !important;
+                padding-bottom: 5px;
+            }
+        }
+    }
+
+    .delete-account {
+        padding-top: 10px;
     }
 }
