Error page photo and text added

--- a/templates/pages/error-page.html
+++ b/templates/pages/error-page.html
@@ -1,3 +1,7 @@
 {% extends 'layout/base.html' %} {% set page = "error" %} {% block content %}
-
+<h1 class="hiddem">Error 404</h1>
+<img src="/static/images/Errors/Error-404.jpg" alt="error-page-image" class="error-page-image">
+<h2 class="error-title">
+    <span class="error-grats">Grats.</span> You broke it.<br>This page doesn't exist or some other horrible error has occured.
+</h2>
 {% endblock %}
