Error page scss file created:

--- a/templates/pages/error-page.html
+++ b/templates/pages/error-page.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %} {% set page = "error" %} {% block content %}
+<!--{% extends 'layout/base.html' %} {% set page = "error" %} {% block content %} -->
 <h1 class="hiddem">Error 404</h1>
 <img src="/static/images/Errors/Error-404.jpg" alt="error-page-image" class="error-page-image">
 <h2 class="error-title">
