Error page basic style applied

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,3 +32,4 @@
 @import 'page-styles/search-result.scss';
 @import 'page-styles/landing-page.scss';
 @import 'page-styles/account.scss';
+@import 'page-styles/error-page.scss';
