--- a/static/css/style.css
+++ b/static/css/style.css
@@ -885,4 +885,27 @@ form p {
   padding-top: 10px;
 }
 
+.error-page-mani {
+  padding-top: 60px;
+}
+
+.error-page-image {
+  width: 320px;
+  height: 200px;
+}
+
+.error-title {
+  font-size: 16px;
+}
+.error-title span {
+  font-size: 18px;
+  color: #FF3377;
+}
+.error-title p {
+  padding-top: 5px;
+  font-weight: 300;
+  color: #a1a1a1;
+  font-size: 12px;
+}
+
 /*# sourceMappingURL=style.css.map */
